// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button empty render 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH cFftlV"
  disabled={false}
  type="button"
/>
`;

exports[`Button should render disabled 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH ehkgOs"
  disabled={true}
  type="button"
>
  Some text
</button>
`;

exports[`Button should render with primary property 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH cFftlV"
  disabled={false}
  type="button"
>
  Some text
</button>
`;

exports[`Button should render with secondary property 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH cpwOxr"
  disabled={false}
  type="button"
>
  Some text
</button>
`;

exports[`Button should render with text 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH cFftlV"
  disabled={false}
  type="button"
>
  Some text
</button>
`;

exports[`Button should render with title 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH cFftlV"
  disabled={false}
  title="some title"
  type="button"
>
  Some text
</button>
`;
